Made a working hook function, outbound packet hook is working tho still hackish

--- a/MapleInject/MapleInject/MapleInject.vcxproj.filters
+++ b/MapleInject/MapleInject/MapleInject.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="main.h">
       <Filter>Source Files\main</Filter>
     </ClInclude>
+    <ClInclude Include="hooks.h">
+      <Filter>Source Files\hooks</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
