--- a/MapleInject/MapleInject/MapleInject.vcxproj
+++ b/MapleInject/MapleInject/MapleInject.vcxproj
@@ -138,6 +138,7 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="hooks.h" />
     <ClInclude Include="main.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
