--- a/MapleInject/MapleInject/MapleInject.vcxproj
+++ b/MapleInject/MapleInject/MapleInject.vcxproj
@@ -140,11 +140,12 @@
   <ItemGroup>
     <ClInclude Include="hooks.h" />
     <ClInclude Include="main.h" />
+    <ClInclude Include="memory.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="address.cpp" />
+    <ClCompile Include="memory.cpp" />
     <ClCompile Include="dllmain.cpp">
       <CompileAsManaged Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</CompileAsManaged>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
